# AI-Code-Reviewer

./: .gitignore  README.md  pyproject.toml
src/code_reviewer/: console.py  file_walker.py  fixer_agent.py  language_detector.py  llm_selector.py  main.py  reviewer_agents.py  utils.py
src/code_reviewer/prompts/: bug_detector.poml  error_detector.poml  fixer.poml  improvements.poml  summariser.poml
