[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[project]
name = "ai-code-reviewer"
version = "0.1.0"
dependencies = [
    "langchain",
    "langgraph"
]

[project.scripts]
code-reviewer = "code_reviewer.main:run"